# Zeeno_Sessions

./: .arcconfig  .clang-tidy  big-int.md  clang-format.md  geometry.md  mqtt-exporter.md
bolci/hello-world/: CMakeLists.txt
bolci/hello-world/src/: helloworld.cpp
chip/1/: CMakeLists.txt
chip/PythonCamp/Kiwi/: README.md  solution.py
chip/big-int/: CMakeLists.txt
chip/big-int/include/: BigInt.hpp  TestSet.hpp  main.hpp
chip/big-int/src/: BigInt.cpp  main.cpp
chip/conan-base/: CMakeLists.txt  README.md  conanfile.txt
chip/conan-base/src/: main.cpp
chip/hello-world/: main.cpp
chip/mqqt-exporter/: CMakeLists.txt  conan_install.bat  conanfile.txt  config.json  configPokus.json  output.txt
chip/mqqt-exporter/include/: businessLogic.hpp  configReader.hpp  counter.hpp  gauge.hpp  histogram.hpp  metric.hpp  metricWriter.hpp  myException.hpp  summary.hpp
chip/mqqt-exporter/include/mqtt/: client.hpp
chip/mqqt-exporter/src/: Summary.cpp  businessLogic.cpp  client.cpp  configReader.cpp  counter.cpp  gauge.cpp  histogram.cpp  main.cpp  metric.cpp  metricWriter.cpp
chip/polymorphism/include/: circle.hpp  rectangle.hpp  shape.hpp  triangle.hpp
chip/polymorphism/src/: circle.cpp  main.cpp  rectangle.cpp  triangle.cpp
chip/simple-calc/src/: main.cpp
zeeno/big-int/: CMakeLists.txt
zeeno/big-int/include/: BigInt.hpp
zeeno/big-int/src/: BigInt.cpp  TestSet.cpp  main.cpp
zeeno/conan-base/: conan_install.bat  conanfile.txt
zeeno/conan-base/include/: main.hpp
zeeno/hello-world/: CMakeLists.txt
zeeno/hello-world/include/: main.h
zeeno/hello-world/src/: main.cpp
zeeno/simple-calc/: CMakeLists.txt
zeeno/simple-calc/include/: Addition.hpp  Echo.hpp  MathOperation.hpp  Pow.hpp  Sqrt.hpp  Subtraction.hpp  main.hpp
zeeno/simple-calc/src/: Addition.cpp  Echo.cpp  MathOperation.cpp  Pow.cpp  Sqrt.cpp  Subtraction.cpp  main.cpp
